# agentpilot-orchestrator

./: .gitignore  README.md  README_AGENTPILOT_ORCHESTRATOR_EN.md  cutover-manifest.json  pyproject.toml  requirements-dev.txt
.claude/: ROUTING_DISCIPLINE.md
.github/: AGENT_REGISTRY.md  ASSET_CLASSIFICATION.md  BRANCH_HYGIENE_POLICY.md  KNOWHOW_EXPOSURE_AUDIT_2026-04-11.md  MCP_ACTIVATION.md  MCP_CONTRACT.md  OPEN_CORE_BOUNDARY.md  RELEASE_NOTES.md  ROADMAP.md  UPDATE_STATUS.md  active_option_sync.py  copilot-instructions.md  copilot-instructions1.md  decision-priority.md  i18n-GUIDE.md  interventions.py  mcp_configure.py  mcp_server.py  mcp_status.py  requirements.txt  router.py  router_audit.py  routing-map.json  session_header.py  skills.sh  subagent-brief.md  sync_version_file.py  token-budget-allocation.md  update_manager.py  update_report.py  versioning-strategy.md
.plans/: README.md  asse-a-path-policy.md  asse-b-init-wizard.md  asse-c-structure.md  asse-d-strict-mode.md  asse-e-tests.md  asse-f-read-policy.md  asse-x-audit.md
artifacts/: cutover-manifest.json
core/: __init__.py  copilot-instructions.md  mcp_server.py  mcp_status.py  recovery_engine.py  router.py  router_audit.py  router_planner.py  routing-map.json  session_header.py  session_manager.py  update_manager.py  update_report.py
docs/: AGENTPILOT_V2_PLAN.md  CLI_NOOB_GUIDE.md  CLI_OPTIONS_MATRIX.md  RELEASE_NOTES.md  SYNC_STRATEGY.md  WORKSPACE_HYGIENE.md
rgen/: __init__.py  __main__.py  adapter.py  backup.py  cli.py  config.py  cost_estimator.py  cutover.py  dashboard_ui.py  fs_policy.py  gitignore_wizard.py  graph_router.py  interventions.py  language_detector.py  lifecycle.py  metrics_collector.py  models.py  pattern_registry.py  policy_engine.py  premium_policy_loader.py  premium_pricing_loader.py  premium_runtime_loader.py  questionnaire.py  read_policy.py  roi_benchmark.py  scenario_clusterer.py  self_checker.py  session_context.py  template_localizer.py  weight_calibrator.py  writer.py
tests/: conftest.py  test_active_option_sync.py  test_adapter.py  test_agentpilot_guardrails.py  test_backup.py  test_branding_migration.py  test_cli.py  test_cli_language_integration.py  test_config.py  test_cost_estimator.py  test_cutover.py  test_dashboard_ui.py  test_fs_audit_dryrun.py  test_github_write_hardening.py  test_gitignore_wizard.py  test_graph_router.py  test_graph_router_integration.py  test_installation_guard.py  test_integration_quality.py  test_language_detector.py  test_lifecycle.py  test_mcp_configure.py  test_mcp_server_smoke.py  test_mcp_status.py  test_metrics_collector.py  test_no_direct_writes.py  test_no_high_risk_secrets.py  test_pattern_registry.py  test_policy_engine.py  test_premium_policy_loader.py  test_premium_pricing_loader.py  test_premium_runtime_loader.py  test_private_boundary_guard.py  test_questionnaire.py  test_read_policy.py  test_recovery_engine.py  test_roi_benchmark.py  test_router_runtime.py  (+15 more)
(+61 files in other folders)
