[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-generator"
version = "0.1.0"
description = "Auto-generates AI assistant routing systems from project patterns"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rgen = "rgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rgen"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
