[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-generator"
version = "0.2.0"
description = "Auto-generates AI assistant routing systems from project patterns"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[project.scripts]
rgen = "rgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rgen"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
