[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpilot-orchestrator"
version = "0.5.0"
description = "Auto-generates AI assistant routing systems from project patterns"
authors = [
    { name = "Massimo Ronzulli", email = "massimo.ronzulli@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",  # For TUI dashboard rendering (optional feature)
]

[project.urls]
Homepage = "https://github.com/maironz/agentpilot-orchestrator"
Repository = "https://github.com/maironz/agentpilot-orchestrator"
Documentation = "https://github.com/maironz/agentpilot-orchestrator#readme"
Issues = "https://github.com/maironz/agentpilot-orchestrator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pyyaml>=6.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
rgen = "rgen.cli:main"
agentpilot = "rgen.cli:main"
agentpilot-mcp = "core.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgen*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rgen", "core"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
